package Observer;

public class observerPack<ParameterType>
{
    public IBroadcaster<ParameterType> Broadcaster;
    public Invoker<ParameterType> Invoker;
}
